--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/find-ingreso.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/find-ingreso.component.html
@@ -1,1 +1,52 @@
-<p>find-ingreso works!</p>
+<div class="container">
+    <h1>Búsqueda ingresos de inventario</h1>
+    <hr>
+    <div class="container">
+        <form class="example-form form-floating p-2 m-2">
+            <mat-form-field class="m-3 example-full-width" >
+              <mat-label>Producto a buscar</mat-label>
+              <input type="text" class="example-full-width"
+                     placeholder=""
+                     aria-label="Producto a buscar"
+                     matInput
+                     [formControl]="myControl"
+                     [matAutocomplete]="auto"
+                     [(ngModel)]="criterio" 
+                    (focus)="limpiarInfo()"
+                     >
+              <mat-autocomplete #auto="matAutocomplete" class="example-full-width">
+                <mat-option *ngFor="let option of filteredOptions  | async" [value]="option.producto" (click)="selectForQuery(option)">
+                   {{option.producto}}
+                </mat-option>
+                            
+              </mat-autocomplete>
+            </mat-form-field>
+            <button mat-stroked-button color="primary" class="m-2" (click)="loadInfo()">Seleccionar</button>        
+        </form>
+    </div>
+
+    <div class="container" *ngIf="forLoad">
+        <table class="table table-striped table-hover">
+          <thead>
+              <tr>                 
+                  <th>Cantidad</th>
+                  <th>Precio</th>
+                  <th>Dia</th>
+                  <th>Mes</th>
+                  <th>Año</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let item of entradas">
+                  <td>{{item.cantidad}}</td>
+                  <td>{{item.Precio}}</td>
+                  <td>{{item.dia}}</td>
+                  <td>{{item.mes}}</td>
+                  <td>{{item.anio}}</td>                 
+              </tr>
+          </tbody>
+        </table>
+    </div>
+   
+</div>
+
