--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/upd-ingreso.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/upd-ingreso.component.html
@@ -1,1 +1,107 @@
-<p>upd-ingreso works!</p>
+<div class="container">
+    <h1>Actualización ingresos de inventario</h1>
+    <hr>
+    <div class="container">
+        <form class="example-form form-floating p-2 m-2">
+            <mat-form-field class="m-3 example-full-width" >
+              <mat-label>Producto a buscar</mat-label>
+              <input type="text" class="example-full-width"
+                     placeholder=""
+                     aria-label="Producto a buscar"
+                     matInput
+                     [formControl]="myControl"
+                     [matAutocomplete]="auto"
+                     [(ngModel)]="criterio" 
+                    (focus)="limpiarInfo()"
+                     >
+              <mat-autocomplete #auto="matAutocomplete" class="example-full-width">
+                <mat-option *ngFor="let option of filteredOptions  | async" [value]="option.producto" (click)="selectForQuery(option)">
+                   {{option.producto}}
+                </mat-option>
+                            
+              </mat-autocomplete>
+            </mat-form-field>
+            <button mat-stroked-button color="primary" class="m-2" (click)="loadInfo()">Seleccionar</button>        
+        </form>
+    </div>
+
+    <div class="container" *ngIf="forLoad">
+        <table class="table table-striped table-hover">
+          <thead>
+              <tr>                 
+                  <th>Cantidad</th>
+                  <th>Precio</th>
+                  <th>Dia</th>
+                  <th>Mes</th>
+                  <th>Año</th>
+                  <th>Acción</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let item of entradas">
+                  <td>{{item.cantidad}}</td>
+                  <td>{{item.Precio}}</td>
+                  <td>{{item.dia}}</td>
+                  <td>{{item.mes}}</td>
+                  <td>{{item.anio}}</td>
+                  <td><a class="btn btn-warning btn-sm" type="button"
+                    data-bs-toggle="modal" data-bs-target="#loadImagePerfil"
+                    (click)="infoModal(item)"
+                    >Editar</a></td>                 
+              </tr>
+          </tbody>
+        </table>
+    </div>
+   
+</div>
+
+<div class="container form-control form-floating" *ngIf="editar">     
+        
+    <form action="" [formGroup]="miForm">
+        <div class="form-floating m-3">
+            <select class="form-select" id="producto" formControlName="producto" >                                                      
+                <option *ngFor="let item of productosL" value="{{item.idProductos}}" >{{item.producto}}</option>                                  
+              </select>
+           <label for="producto">Producto</label>
+        </div>
+        <div class="form-floating m-3">
+            <input type="number" class="form-control" id="floatingInput" 
+            placeholder="Cantidad"
+            formControlName="cantidad"
+            >
+            <label for="floatingInput">Cantidad</label>
+            <span class="form-text text-danger"
+            *ngIf="ValidaCampo('cantidad')"           
+            >Este campo es obligatorio, mayor a 0</span>              
+        </div>
+        <div class="form-floating m-3">
+            <input type="number" class="form-control" id="floatingInput" 
+            placeholder="Precio"
+            formControlName="Precio"
+            >
+            <label for="floatingInput">Precio</label>
+            <span class="form-text text-danger"
+            *ngIf="ValidaCampo('Precio')"           
+            >Este campo es obligatorio, mayor a 0</span>              
+        </div>
+        <div class="form-floating m-3">
+            <mat-form-field class="m-3">
+                <mat-label>Fecha</mat-label>
+                <input matInput [matDatepicker]="picker" placeholder="Fecha MM/DD/YYYY" formControlName="fecha">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+                      
+        </div>   
+        <div class="form-floating m-5 p-1" *ngIf="editar">
+            <div class="float-md-end m-3">
+                <button class="btn btn-outline-danger "
+                (click)="updateStockIn()"
+                >Guardar</button>
+            </div> 
+        </div>                     
+
+    </form>
+
+</div>
+
