--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/inventarios/inventarios.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/inventarios/inventarios.component.html
@@ -1,1 +1,86 @@
-<p>inventarios works!</p>
+<div class="container">
+    <h1>Creación de inventarios</h1>
+    <hr>
+    <div class="container form-control form-floating">     
+        
+        <form action="" [formGroup]="miForm">
+            <div class="form-floating m-3">
+                <select class="form-select" id="producto" formControlName="producto"  >                                                      
+                    <option *ngFor="let item of productosL" value="{{item.idProductos}}" >{{item.producto}}</option>                                  
+                  </select>
+               <label for="producto">Producto</label>
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="Stock"
+                formControlName="stock"
+                >
+                <label for="floatingInput">Stock</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('stock')"           
+                >Este campo es obligatorio, mayor o igual a 0</span>              
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="Stock Mínimo"
+                formControlName="stockMin"
+                >
+                <label for="floatingInput">Stock Mínimo</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('stockMin')"           
+                >Este campo es obligatorio, mayor o igual a 0</span>              
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="Stock Máximo"
+                formControlName="stockMax"
+                >
+                <label for="floatingInput">Stock Máximo</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('stockMax')"           
+                >Este campo es obligatorio, mayor o igual a 0</span>              
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="Precio de venta"
+                formControlName="PrecioVenta"
+                >
+                <label for="floatingInput">Precio de venta</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('PrecioVenta')"           
+                >Este campo es obligatorio, mayor a 0</span>              
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="% Impuesto"
+                formControlName="impuesto"
+                >
+                <label for="floatingInput">% Impuesto</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('impuesto')"           
+                >Este campo es obligatorio, mayor a 0</span>              
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="% Descuento"
+                formControlName="descuento"
+                >
+                <label for="floatingInput">% Descuento</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('descuento')"           
+                >Este campo es obligatorio, mayor a 0</span>              
+            </div>
+         
+          <div class="form-floating m-5 p-1">
+                <div class="float-md-end">
+                    <button class="btn btn-outline-primary "
+                    (click)="crearStock()"
+                    >Guardar</button>
+                </div>                
+            </div>         
+
+        </form>
+
+    </div>
+
+</div>
