--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/servicios/servicios.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/servicios/servicios.component.html
@@ -1,1 +1,73 @@
-<p>servicios works!</p>
+<div class="container">
+    <h1>Creación de servicios</h1>
+    <hr>
+    <div class="container form-control form-floating">     
+        
+        <form action="" [formGroup]="miForm">
+            <div class="form-floating m-3">
+                <input type="text" class="form-control" id="floatingInput" 
+                placeholder="Nombre servicio"
+                formControlName="servicio"
+                >
+                <label for="floatingInput">Nombre servicio</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('servicio')"           
+                >Este campo es obligatorio, mas de 3 caracteres</span>
+              
+            </div>           
+
+            <div class="form-floating m-3">
+                <input type="text" class="form-control" id="floatingInput" 
+                placeholder="Descripción"
+                formControlName="descripcion"
+                >
+                <label for="floatingInput">Descripción</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('descripcion')"           
+                >Este campo es obligatorio, mas de 3 caracteres</span>
+               
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="Precio"
+                formControlName="precio"
+                >
+                <label for="floatingInput">Precio</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('precio')"           
+                >Este campo es obligatorio, mínimo 1</span>
+            </div>
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="% Impuesto"
+                formControlName="impuesto"
+                >
+                <label for="floatingInput">% Impuesto</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('impuesto')"           
+                >Este campo es obligatorio, mayor o igual a 0</span>
+            </div>      
+            <div class="form-floating m-3">
+                <input type="number" class="form-control" id="floatingInput" 
+                placeholder="% Descuento"
+                formControlName="descuento"
+                >
+                <label for="floatingInput">% Descuento</label>
+                <span class="form-text text-danger"
+                *ngIf="ValidaCampo('descuento')"           
+                >Este campo es obligatorio, mayor o igual a 0</span>
+            </div>          
+            
+          <div class="form-floating m-5 p-1">
+                <div class="float-md-end">
+                    <button class="btn btn-outline-primary "
+                    (click)="crearServicio()"
+                    >Guardar</button>
+                </div>                
+            </div>           
+
+        </form>
+
+    </div>
+
+</div>
