--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/del-ingreso.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/del-ingreso.component.html
@@ -87,7 +87,7 @@
         <div class="form-floating m-3">
             <mat-form-field class="m-3">
                 <mat-label>Fecha</mat-label>
-                <input matInput [matDatepicker]="picker" placeholder="Fecha MM/DD/YYYY" formControlName="fecha">
+                <input matInput [matDatepicker]="picker" placeholder="Fecha DD/MM/YYYY" formControlName="fecha">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
