--- a/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/upd-ingreso.component.html
+++ b/gestor_veterinaria/src/app/pages/stock-manager/pages/ingresos-inventario/upd-ingreso.component.html
@@ -87,11 +87,10 @@
         <div class="form-floating m-3">
             <mat-form-field class="m-3">
                 <mat-label>Fecha</mat-label>
-                <input matInput [matDatepicker]="picker" placeholder="Fecha MM/DD/YYYY" formControlName="fecha">
+                <input matInput [matDatepicker]="picker" placeholder="Fecha DD/MM/YYYY" formControlName="fecha">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-                      
+            </mat-form-field>                      
         </div>   
         <div class="form-floating m-5 p-1" *ngIf="editar">
             <div class="float-md-end m-3">
