UPdate for demo

--- a/gestor_veterinaria/src/app/pages/sales-manager/pedidos/pedidos.component.html
+++ b/gestor_veterinaria/src/app/pages/sales-manager/pedidos/pedidos.component.html
@@ -47,7 +47,7 @@
             </div>  
             <div class="form-floating m-3">
                 <select class="form-select" id="ciudad" formControlName="ciudad"  >                                                      
-                    <option *ngFor="let item of ciudadesL" value="{{item.codigo}" >{{item.Ciudad}}</option>                                  
+                    <option *ngFor="let item of ciudadesL" value="{{item.codigo}}" >{{item.Ciudad}}</option>                                  
                   </select>
                <label for="ciudad">Ciudad</label>
             </div>
@@ -89,3 +89,8 @@
     </div>
 
 </div>
+<!-- <div class="float-md-end m-3">
+    <button class="btn btn-outline-success "
+    (click)="prueba()"
+    >Guardar</button>
+</div>  -->
