--- a/gestor_veterinaria/src/app/pages/sales-manager/detalles/detalles.component.html
+++ b/gestor_veterinaria/src/app/pages/sales-manager/detalles/detalles.component.html
@@ -1,1 +1,60 @@
-<p>detalles works!</p>
+<div class="container">
+    <h1>Creación detalle de pedidos</h1>
+    <hr>
+    <div class="container">
+        <form class="example-form form-floating p-2 m-2">
+            <mat-form-field class="m-3 example-full-width" >
+              <mat-label>Criterio de búsqueda</mat-label>
+              <input type="text" class="example-full-width"
+                     placeholder=""
+                     aria-label="Criterio de búsqueda"
+                     matInput
+                     [formControl]="myControl"
+                     [matAutocomplete]="auto"
+                     [(ngModel)]="criterio" 
+                    (focus)="limpiarInfo()"
+                     >
+              <mat-autocomplete #auto="matAutocomplete" class="example-full-width">
+                <mat-option *ngFor="let option of filteredOptions  | async" [value]="option.documento" (click)="selectForQuery(option)">
+                    {{option.documento}} - {{option.nombre}}
+                </mat-option>
+                            
+              </mat-autocomplete>
+            </mat-form-field>
+            <button mat-stroked-button color="primary" class="m-2" (click)="loadInfo()">Visualizar</button>      
+            
+        </form>
+    </div>    
+    <div class="container" *ngIf="forLoad">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>                 
+                    <th>#</th>
+                    <th>Cliente</th>
+                    <th>Dirección de entrega</th>
+                    <th>Ciudad</th>
+                    <th>Observaciones</th>
+                    <th>Fecha</th>
+                    <th>Acción</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of salidaList">
+                    <td>{{item.idpedidos}}</td>
+                    <td>{{item.documento}} - {{item.nombre}}</td>
+                    <td>{{item.direccionEntrega}}</td>
+                    <td>{{item.ciudadN}}</td>
+                    <td>{{item.observaciones}}</td>
+                    <td>{{item.fecha|date}}</td>
+                    <td><a class="btn btn-success btn-sm" type="button"                      
+                      (click)="loadForUpdate(item)"                    
+                      >Ver</a></td>                 
+                </tr>
+            </tbody>
+          </table>
+    </div>
+
+
+</div>
+
+<pre>{{pedido|json}}</pre>
