--- a/gestor_veterinaria/src/app/pages/sales-manager/pedidos/pedidos.component.html
+++ b/gestor_veterinaria/src/app/pages/sales-manager/pedidos/pedidos.component.html
@@ -4,10 +4,10 @@
     <div class="container">
         <form class="example-form form-floating p-2 m-2">
             <mat-form-field class="m-3 example-full-width" >
-              <mat-label>Criterio de búsqueda</mat-label>
+              <mat-label>Documento cliente</mat-label>
               <input type="text" class="example-full-width"
                      placeholder=""
-                     aria-label="Criterio de búsqueda"
+                     aria-label="Documento cliente"
                      matInput
                      [formControl]="myControl"
                      [matAutocomplete]="auto"
