--- a/gestor_veterinaria/src/app/pages/sales-manager/detalles/detalles.component.html
+++ b/gestor_veterinaria/src/app/pages/sales-manager/detalles/detalles.component.html
@@ -4,10 +4,10 @@
     <div class="container">
         <form class="example-form form-floating p-2 m-2">
             <mat-form-field class="m-3 example-full-width" >
-              <mat-label>Criterio de búsqueda</mat-label>
+              <mat-label>Documento cliente</mat-label>
               <input type="text" class="example-full-width"
                      placeholder=""
-                     aria-label="Criterio de búsqueda"
+                     aria-label="Documento cliente"
                      matInput
                      [formControl]="myControl"
                      [matAutocomplete]="auto"
@@ -39,8 +39,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of salidaList">
-                    <td>{{item.idpedidos}}</td>
+                <tr *ngFor="let item of salidaList |paginatorPipe:p_Size:page">
+                    <td class="col-1">{{item.idpedidos}}</td>
                     <td>{{item.documento}} - {{item.nombre}}</td>
                     <td>{{item.direccionEntrega}}</td>
                     <td>{{item.ciudadN}}</td>
@@ -51,10 +51,143 @@
                       >Ver</a></td>                 
                 </tr>
             </tbody>
+           
           </table>
+            <mat-paginator [length]="salidaList.length"
+            [pageSize]="p_Size"
+            [pageSizeOptions]="optionsPage"
+            (page)="pageEvent($event)"
+            aria-label="Select page"
+            class="m-3 example-full-width"
+            ></mat-paginator>
     </div>
+
+    <div class="container" *ngIf="editar">
+       
+        <table class="table table-striped table-hover w-50">
+            <thead>
+                <tr>
+                    <th>Pedido</th>
+                    <th>Cliente</th>
+                    <th>Agregar Producto</th>
+                    <th>Agregar Servicio</th>
+                    <th>Guardar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{OrderForUpd.idpedidos}}</td>
+                    <td>{{OrderForUpd.documento}} - {{OrderForUpd.nombre}}</td>
+                    <td >     
+                        <a type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="tipoP()">
+                            <span class="material-icons bi md-48 bg-warning rounded-circle">add_circle_outline</span>                            
+                        </a>
+                    </td>                    
+                    <td >     
+                        <a type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="tipoS()">
+                            <span class="material-icons bi md-48 bg-secondary rounded-circle">add_circle_outline</span>                            
+                        </a>
+                    </td>
+                    <td>
+                        <button class="btn btn-success small" (click)="crearDetalle()">Guardar</button>
+                    </td>
+                    
+                </tr>
+            </tbody>
+        </table> 
+
+        <div class="w-100" *ngIf="detalleL.length>0">
+            <table class="table table-striped table-hover w-100">
+                <thead>
+                    <tr>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th>Precio</th>
+                        <th>% Impuesto</th>
+                        <th>% Descuento</th>
+                        <th>Tipo producto</th>
+                        <th>Sub Total</th>
+                        <th>Sub Total Impuesto</th>
+                        <th>Sub Total Descuento</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody >
+                    <tr *ngFor="let detalle of detalleL" >
+                        <td>{{detalle.productoName}}</td>
+                        <td>{{detalle.cantidad}}</td>
+                        <td>{{detalle.precio}}</td>
+                        <td>{{detalle.impuesto}}</td>
+                        <td>{{detalle.descuento}}</td>
+                        <td>{{detalle.tipoProducto}}</td>
+                        <td>{{detalle.subTotal|number}}</td>
+                        <td>{{detalle.subTotalImpuesto|number}}</td>
+                        <td>{{detalle.subTotalDescuento|number}}</td>
+                        <td>{{detalle.total|number}}</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="6">Totales</th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <th>{{totales.sub|number}}</th>
+                        <th>{{totales.subImpuesto|number}}</th>
+                        <th>{{totales.subDescuento|number}}</th>
+                        <th>{{totales.total|number}}</th>
+                    </tr>
+                </tbody>
+            </table>           
+        </div>
+    </div>
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Detalle de pedido</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              
+                <div class="form-control form-floating">
+                    <form action="" [formGroup]="miForm">
+                        <div class="form-floating m-3" *ngIf="tipoPS==='P'">
+                            <select class="form-select" id="productoD" formControlName="productoD">                                                      
+                                <option *ngFor="let item of productosL" value="{{item.idProductos}}" >{{item.producto}}</option>                                  
+                              </select>
+                           <label for="tipodocumento">Producto</label>
+                        </div>
+                        <div class="form-floating m-3" *ngIf="tipoPS==='S'">
+                            <select class="form-select" id="servicioD" formControlName="servicioD"  >                                                      
+                                <option *ngFor="let item of serviciosL" value="{{item.idServicios}}" >{{item.servicio}}</option>                                  
+                              </select>
+                           <label for="tipodocumento">Servicio</label>
+                        </div>
+                        <div class="form-floating m-3">
+                            <input type="number" class="form-control" id="floatingInput" 
+                            placeholder="Cantidad"
+                            formControlName="cantidad"
+                            >
+                            <label for="floatingInput">Cantidad</label>
+                            <span class="form-text text-danger"
+                             *ngIf="ValidaCampo('cantidad')"           
+                            >Este campo es obligatorio, mas de 1 unidad</span>
+                          
+                        </div>
+                      
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="agregarDetalle()">Agregar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    
 
 
 </div>
 
-<pre>{{pedido|json}}</pre>
